<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".samples.OPorqueDasImagensVetoriaisActivity">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/radio_raster_drawable"
        android:src="@drawable/radio_raster" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/width_60dp_height_60dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/less_than_original_size_raster"
        android:textSize="20sp" />
</LinearLayout>