<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".samples.OPorqueDasImagensVetoriaisActivity">

    <ImageView
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:contentDescription="@string/radio_vector_drawable"
        android:src="@drawable/radio_vector" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/height_360dp_width_360dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/big_than_original_size_vector"
        android:textSize="20sp" />
</LinearLayout>